--- a/app_py.ipynb
+++ b/app_py.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDLN5TjunhP6kkntWac/Gk",
+      "authorship_tag": "ABX9TyM2tJH7+L8GWKmMGgeN404D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,9 @@
         "from agent_rag_pipeline import AgenticRAG\n",
         "from dotenv import load_dotenv\n",
         "\n",
+        "# -----------------------------\n",
+        "# Load environment keys\n",
+        "# -----------------------------\n",
         "load_dotenv()\n",
         "\n",
         "st.set_page_config(page_title=\"Agentic RAG\", layout=\"wide\")\n",
@@ -50,6 +53,7 @@
         "    # Initialize agent\n",
         "    agent = AgenticRAG(docs)\n",
         "\n",
+        "    # User query\n",
         "    query = st.text_input(\"Ask a question:\")\n",
         "    if query:\n",
         "        answer = agent.get_answer(query)\n",
